Trabajando el responsive

--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -29,12 +29,12 @@
     </header>
 <!-- FIN DEL HEADER       -->
 <!-- INICIO DEL MAIN -->
+    <img class="top--img" src="../Images/frontdesk-contacto-1 1.png" alt="seccion contacto">
     <main>
-        <img class="top--img" src="../Images/frontdesk-contacto-1 1.png" alt="seccion contacto">
         <h1 class="title text--yellow">CONTACTO</h1>
         <section>
             <article>
-                <h2 class="title text--yellow">Contactate con nosotros</h2>
+                <h2 class="title text--yellow">CONTACTATE CON NOSOTROS</h2>
                 <section class="contact1">
                     <div>
                         <img src="../Images/logo-hotel.svg" alt="city hotel Boutique">
@@ -63,6 +63,7 @@
             </article>
         </section>
     </main>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9935.635379507326!2d-58.39065735071469!3d-34.607852932361624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccadb304d4c13%3A0x2ccd31cab394d3c5!2sAv.%20de%20Mayo%201496%2C%20C1085ABR%20CABA!5e0!3m2!1ses!2sar!4v1653083486940!5m2!1ses!2sar" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 <!-- FIN DEL MAIN -->
 <!-- INICIO DEL FOOTER -->
     <footer class="footer">
