--- a/Pages/Habitaciones.html
+++ b/Pages/Habitaciones.html
@@ -29,8 +29,8 @@
     </header> 
 <!-- FIN DEL HEADER       -->
 <!-- MAIN DE LA PAGINA -->
+    <img class="top--img" src="../Images/habitacion-top-habitaciones 1.jpg" alt="seccion habitaciones">
     <main>
-        <img class="top--img" src="../Images/habitacion-top-habitaciones 1.jpg" alt="seccion habitaciones">
         <h1 class="title text--yellow">HABITACIONES</h1>
         <section>
             <article class="room">
@@ -40,7 +40,7 @@
                         Escritorio de trabajo, Personal Bar, Smart TV, Notebook (a pedido), Teléfono inalámbrico, Conexión Wi-Fi sin cargo, Secador y Productos de tocador, Plancha de pelo (a pedido), Caja de seguridad con capacidad para notebook, Control de temperatura individual, Equipo de yoga (a pedido)
                     </p>
                 </div>
-                <img src="../Images/Habitacion-Standard-1 1.jpg" alt="habitacion Doble Estandar">
+                <img class="room_img" src="../Images/Habitacion-Standard-1.jpg" alt="habitacion Doble Estandar">
             </article>
             <article class="room__reverse">
                 <div class="room__text">
@@ -49,16 +49,16 @@
                         Diseño exclusivo, Amplio escritorio de trabajo, Personal Bar, Batas y pantuflas, Smart TV, Notebook (a pedido), Teléfono inalámbrico, Cafetera Nespresso, Conexión Wi-Fi sin cargo, Secador de pelo, Amenities exclusivos, Plancha de pelo (a pedido), Caja de seguridad con capacidad para notebook, Control de temperatura individual, Equipo de yoga (a pedido).
                     </p>
                 </div>
-                <img src="../Images/habitacion-superior-1 1.jpg" alt="habitacion Doble Superior">
+                <img src="../Images/habitacion-superior-1.jpg" alt="habitacion Doble Superior">
             </article>
             <article class="room">
-                <div class="room_text">
+                <div class="room__text">
                     <h2 class="subtitle text--yellow">Habitación Deluxer</h2><br>
                     <p>
                         Hirdomasaje para 2 personas, Escritorios de trabajo, Diseño exclusivo, Personal bar, Cafetera Nespresso, Batas y pantuflas, 2 Smart TV, Teléfono inalámbrico, Conexión wi-fi sin cargo, Secador de pelo, Plancha de pelo (a pedido), Amenities exclusivos, Caja de seguridad para notebook, Control de temperatura individual, Equipo de yoga (a pedido).
                     </p>
                 </div>
-                <img src="../Images/Jacuzzi-Suite-Deluxe-1 1.jpg" alt="habitacion Deluxer Jacuzzi">
+                <img src="../Images/Jacuzzi-Suite-Deluxe-1.jpg" alt="habitacion Deluxer Jacuzzi">
             </article>
         </section>
         <section class="form">
