--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -41,9 +41,9 @@
                     </div>
                     <div>
                         <ul>
-                            <li><a href="">Av. de Mayo 1496</a></li>
-                            <li><a href="">+54 (911) 3511-5453</a></li>
-                            <li><a href="">info@cityhotel.com.ar</a></li>
+                            <li><a class="contact1__info" href="">Av. de Mayo 1496</a></li>
+                            <li><a class="contact1__info" href="">+54 (911) 3511-5453</a></li>
+                            <li><a class="contact1__info" href="">info@cityhotel.com.ar</a></li>
                         </ul>
                     </div>
                 </section>
