--- a/Pages/Galeria.html
+++ b/Pages/Galeria.html
@@ -34,18 +34,18 @@
         <h1 class="title text--yellow">GALERIA</h1>
             <h2 class="title text--yellow">CONOCE NUESTRAS INSTALACIONES</h2>
             <section class="galery">
-                <img src="../Images/galeria-1.jpg" alt="">
-                <img src="../Images/galeria-2.jpg" alt="">
-                <img src="../Images/galeria-3.jpg" alt="">
-                <img src="../Images/galeria-4.jpg" alt="">
-                <img src="../Images/galeria-5.jpg" alt="">
-                <img src="../Images/galeria-6.jpg" alt="">
-                <img src="../Images/galeria-7.jpg" alt="">
-                <img src="../Images/galeria-8.jpg" alt="">
-                <img src="../Images/galeria-9.jpg" alt="">
-                <img src="../Images/galeria-10.jpg" alt="">
-                <img src="../Images/galeria-11.jpg" alt="">
-                <img src="../Images/galeria-12.jpg" alt="">
+                <img src="../Images/galeria-1.jpg" alt="habitacion hotel">
+                <img src="../Images/galeria-2.jpg" alt="baño hotal">
+                <img src="../Images/galeria-3.jpg" alt="spa hotal">
+                <img src="../Images/galeria-4.jpg" alt="picina hotal">
+                <img src="../Images/galeria-5.jpg" alt="sala reuniones hotal">
+                <img src="../Images/galeria-6.jpg" alt="habitacion hotel">
+                <img src="../Images/galeria-7.jpg" alt="habitacion hotel">
+                <img src="../Images/galeria-8.jpg" alt="habitacion hotel">
+                <img src="../Images/galeria-9.jpg" alt="loby hotel">
+                <img src="../Images/galeria-10.jpg" alt="jacusi hotel">
+                <img src="../Images/galeria-11.jpg" alt="patio hotel">
+                <img src="../Images/galeria-12.jpg" alt="bufette hotel">
             </section>
             <section class="form">
                 <form class="form__checkin" action="" method="post">
