--- a/Pages/Habitaciones.html
+++ b/Pages/Habitaciones.html
@@ -40,7 +40,7 @@
                         Escritorio de trabajo, Personal Bar, Smart TV, Notebook (a pedido), Teléfono inalámbrico, Conexión Wi-Fi sin cargo, Secador y Productos de tocador, Plancha de pelo (a pedido), Caja de seguridad con capacidad para notebook, Control de temperatura individual, Equipo de yoga (a pedido)
                     </p>
                 </div>
-                <img class="room_img" src="../Images/Habitacion-Standard-1.jpg" alt="habitacion Doble Estandar">
+                <img class="room__img" src="../Images/Habitacion-Standard-1.jpg" alt="habitacion Doble Estandar">
             </article>
             <article class="room__reverse">
                 <div class="room__text">
@@ -49,7 +49,7 @@
                         Diseño exclusivo, Amplio escritorio de trabajo, Personal Bar, Batas y pantuflas, Smart TV, Notebook (a pedido), Teléfono inalámbrico, Cafetera Nespresso, Conexión Wi-Fi sin cargo, Secador de pelo, Amenities exclusivos, Plancha de pelo (a pedido), Caja de seguridad con capacidad para notebook, Control de temperatura individual, Equipo de yoga (a pedido).
                     </p>
                 </div>
-                <img src="../Images/habitacion-superior-1.jpg" alt="habitacion Doble Superior">
+                <img class="room__img" src="../Images/habitacion-superior-1.jpg" alt="habitacion Doble Superior">
             </article>
             <article class="room">
                 <div class="room__text">
@@ -58,7 +58,7 @@
                         Hirdomasaje para 2 personas, Escritorios de trabajo, Diseño exclusivo, Personal bar, Cafetera Nespresso, Batas y pantuflas, 2 Smart TV, Teléfono inalámbrico, Conexión wi-fi sin cargo, Secador de pelo, Plancha de pelo (a pedido), Amenities exclusivos, Caja de seguridad para notebook, Control de temperatura individual, Equipo de yoga (a pedido).
                     </p>
                 </div>
-                <img src="../Images/Jacuzzi-Suite-Deluxe-1.jpg" alt="habitacion Deluxer Jacuzzi">
+                <img class="room__img" src="../Images/Jacuzzi-Suite-Deluxe-1.jpg" alt="habitacion Deluxer Jacuzzi">
             </article>
         </section>
         <section class="form">
