--- a/Pages/Servicios.html
+++ b/Pages/Servicios.html
@@ -50,7 +50,7 @@
                         <li>-Asesoramiento y asistencia en reservas de shows, restaurantes, teatros y excursiones</li>
                     </ul> 
                 </div>
-                <img src="../Images/Servicios-buffet-incluidos.jpg" alt="servicios incluidos">
+                <img class="service__img" src="../Images/Servicios-buffet-incluidos.jpg" alt="servicios incluidos">
             </article>
             <article class="service__reverse">
                 <div class="service__text">
@@ -68,7 +68,7 @@
                         <li>-Agencia de viajes y Turismo</li>
                     </ul>
                 </div>
-                <img src="../Images/Servicios-tango-opcionales.jpg" alt="servicios OPCIONALES">  
+                <img class="service__img" src="../Images/Servicios-tango-opcionales.jpg" alt="servicios OPCIONALES">  
             </article>
             <article class="service">
                 <div class="service__text">
@@ -84,7 +84,7 @@
                         <li>-Pequeña piscina</li>
                     </ul>
                 </div>
-                <img src="../Images/Servicios-spa.jpg" alt="servicios spa">
+                <img class="service__img" src="../Images/Servicios-spa.jpg" alt="servicios spa">
             </article>
         </section>
         <p class="title">Vivi una experiencia inolvidable <br>
