--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             El hotel cuenta con pileta al aire libre, pileta climatizada y un SPA con circuito de aguas único en la región. También dispone de un restaurante propio, y servicios como estacionamiento (sujeto a disponibilidad – requiere reserva previa), Wifi libre en todo el edificio, desayuno, y muchos otros detalles que garantizan un servicio cuidado y dedicado. 
                         </p>
                 </div>
-                <img src="./Images/Hotel-imagen.jpg" alt="City Hotel Boutique">
+                <img class="nosotros__img" src="./Images/Hotel-imagen.jpg" alt="City Hotel Boutique">
             </article>
         </section>
         <h2 class="title text--yellow">NUESTRO RESTAURANTE</h2>
@@ -74,7 +74,7 @@
                             La apuesta es lograr sabores cuidados y reales, y recuperar una alimentación centrada en lo sano y lo natural. Bruma es la Tierra, es el pastizal crudo y el atardecer rojo. Un lugar donde se intenta llegar a la nostalgia y el deseo de vivir una experiencia única.
                         </p>
                 </div>
-                <img src="./Images/restaurante-mezcal.png" alt="restaurante mezcal">
+                <img class="nosotros__img" src="./Images/restaurante-mezcal.png" alt="restaurante mezcal">
             </article>
         </section>
         <h2 class="title text--yellow">LOS MEJORES SERVICIOS EN UN SOLO LUGAR</h2>
