--- a/Pages/Galeria.html
+++ b/Pages/Galeria.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../Images/logo-pestaña.svg">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../Css/Style.css">
     <title>GALERIA - City Hotel Boutique</title>
 </head>
@@ -34,18 +35,18 @@
         <h1 class="title text--yellow">GALERIA</h1>
             <h2 class="title text--yellow">CONOCE NUESTRAS INSTALACIONES</h2>
             <section class="galery">
-                <img src="../Images/galeria-1.jpg" alt="habitacion hotel">
-                <img src="../Images/galeria-2.jpg" alt="baño hotal">
-                <img src="../Images/galeria-3.jpg" alt="spa hotal">
-                <img src="../Images/galeria-4.jpg" alt="picina hotal">
-                <img src="../Images/galeria-5.jpg" alt="sala reuniones hotal">
-                <img src="../Images/galeria-6.jpg" alt="habitacion hotel">
-                <img src="../Images/galeria-7.jpg" alt="habitacion hotel">
-                <img src="../Images/galeria-8.jpg" alt="habitacion hotel">
-                <img src="../Images/galeria-9.jpg" alt="loby hotel">
-                <img src="../Images/galeria-10.jpg" alt="jacusi hotel">
-                <img src="../Images/galeria-11.jpg" alt="patio hotel">
-                <img src="../Images/galeria-12.jpg" alt="bufette hotel">
+                <img data-aos="flip-up" src="../Images/galeria-1.jpg" alt="habitacion hotel">
+                <img data-aos="flip-up" src="../Images/galeria-2.jpg" alt="baño hotal">
+                <img data-aos="flip-up" src="../Images/galeria-3.jpg" alt="spa hotal">
+                <img data-aos="flip-up" src="../Images/galeria-4.jpg" alt="picina hotal">
+                <img data-aos="flip-up" src="../Images/galeria-5.jpg" alt="sala reuniones hotal">
+                <img data-aos="flip-up" src="../Images/galeria-6.jpg" alt="habitacion hotel">
+                <img data-aos="flip-up" src="../Images/galeria-7.jpg" alt="habitacion hotel">
+                <img data-aos="flip-up" src="../Images/galeria-8.jpg" alt="habitacion hotel">
+                <img data-aos="flip-up" src="../Images/galeria-9.jpg" alt="loby hotel">
+                <img data-aos="flip-up" src="../Images/galeria-10.jpg" alt="jacusi hotel">
+                <img data-aos="flip-up" src="../Images/galeria-11.jpg" alt="patio hotel">
+                <img data-aos="flip-up" src="../Images/galeria-12.jpg" alt="bufette hotel">
             </section>
             <section class="form">
                 <form class="form__checkin" action="" method="post">
@@ -92,5 +93,9 @@
         </section>   
     </footer>
 <!-- FIN DEL FOOTER -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 </body>
 </html>
