--- a/Pages/Habitaciones.html
+++ b/Pages/Habitaciones.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../Images/logo-pestaña.svg">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../Css/Style.css">
     <title>HABITACIONES - City Hotel Boutique</title>
 </head>
@@ -34,31 +35,31 @@
         <h1 class="title text--yellow">HABITACIONES</h1>
         <section>
             <article class="room">
-                <div class="room__text">
+                <div class="room__text data-aos="fade-right"">
                     <h2 class="subtitle text--yellow">Habitación Doble Estandar</h2><br>
                     <p>
                         Escritorio de trabajo, Personal Bar, Smart TV, Notebook (a pedido), Teléfono inalámbrico, Conexión Wi-Fi sin cargo, Secador y Productos de tocador, Plancha de pelo (a pedido), Caja de seguridad con capacidad para notebook, Control de temperatura individual, Equipo de yoga (a pedido)
                     </p>
                 </div>
-                <img class="room__img" src="../Images/Habitacion-Standard-1.jpg" alt="habitacion Doble Estandar">
+                <img class="room__img" data-aos="fade-left" src="../Images/Habitacion-Standard-1.jpg" alt="habitacion Doble Estandar">
             </article>
             <article class="room__reverse">
-                <div class="room__text">
+                <div class="room__text" data-aos="fade-left">
                     <h2 class="subtitle text--yellow">Habitación Doble Superior</h2><br>
                     <p>
                         Diseño exclusivo, Amplio escritorio de trabajo, Personal Bar, Batas y pantuflas, Smart TV, Notebook (a pedido), Teléfono inalámbrico, Cafetera Nespresso, Conexión Wi-Fi sin cargo, Secador de pelo, Amenities exclusivos, Plancha de pelo (a pedido), Caja de seguridad con capacidad para notebook, Control de temperatura individual, Equipo de yoga (a pedido).
                     </p>
                 </div>
-                <img class="room__img" src="../Images/habitacion-superior-1.jpg" alt="habitacion Doble Superior">
+                <img class="room__img" data-aos="fade-right" src="../Images/habitacion-superior-1.jpg" alt="habitacion Doble Superior">
             </article>
             <article class="room">
-                <div class="room__text">
+                <div class="room__text" data-aos="fade-right">
                     <h2 class="subtitle text--yellow">Habitación Deluxer</h2><br>
                     <p>
                         Hirdomasaje para 2 personas, Escritorios de trabajo, Diseño exclusivo, Personal bar, Cafetera Nespresso, Batas y pantuflas, 2 Smart TV, Teléfono inalámbrico, Conexión wi-fi sin cargo, Secador de pelo, Plancha de pelo (a pedido), Amenities exclusivos, Caja de seguridad para notebook, Control de temperatura individual, Equipo de yoga (a pedido).
                     </p>
                 </div>
-                <img class="room__img" src="../Images/Jacuzzi-Suite-Deluxe-1.jpg" alt="habitacion Deluxer Jacuzzi">
+                <img class="room__img" data-aos="fade-left" src="../Images/Jacuzzi-Suite-Deluxe-1.jpg" alt="habitacion Deluxer Jacuzzi">
             </article>
         </section>
         <section class="form">
@@ -106,5 +107,9 @@
         </section>   
     </footer>
 <!-- FIN DEL FOOTER -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 </body>
 </html>
